AC-77 Generate mp4 alongside with mp3

--- a/deploy/aicovers-webui.supervisor.conf
+++ b/deploy/aicovers-webui.supervisor.conf
@@ -9,4 +9,5 @@ stderr_logfile=/var/log/aicovers/webui.log
 stdout_logfile=/var/log/aicovers/webui.log
 environment=
     AICOVERS_SONG_OUTPUT_DIR=/mount/rdisk1/aicovers/static-files,
+    AICOVERS_PICTURES_DIR=/mount/rdisk1/aicovers/static-files/pictures,
     PYTHONUNBUFFERED=true
