--- a/deploy/aicovers-worker.supervisor.conf
+++ b/deploy/aicovers-worker.supervisor.conf
@@ -9,6 +9,7 @@ stderr_logfile=/var/log/aicovers/worker.log
 stdout_logfile=/var/log/aicovers/worker.log
 environment=
     AICOVERS_SONG_OUTPUT_DIR=/mount/rdisk1/aicovers/static-files,
+    AICOVERS_PICTURES_DIR=/mount/rdisk1/aicovers/static-files/pictures,
     AICOVERS_REQUESTS_DIR=/app/aicovers/requests,
     AICOVERS_ARCHIEVE_DIR=/app/aicovers/archieve,
     AICOVERS_DLQ_DIR=/app/aicovers/dlq,
