AC-85 Files server should be HTTPS

--- a/deploy/aicovers-static-files.nginx.conf
+++ b/deploy/aicovers-static-files.nginx.conf
@@ -1,12 +1,18 @@
 server {
-       listen 8001;
-       listen [::]:8001;
+    listen 8001 ssl;
+    listen [::]:8001 ssl;
+    server_name files.aicovers.lightingwayou.com;
 
-       server_name aicovers-static-files;
+    root /mount/rdisk1/aicovers;
 
-       root /mount/rdisk1/aicovers;
+    location / {
+        try_files $uri $uri/ =404;
+    }
 
-       location / {
-               try_files $uri $uri/ =404;
-       }
+    ssl_certificate /etc/letsencrypt/live/files.aicovers.lightingwayou.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/files.aicovers.lightingwayou.com/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 }
